added data part

--- a/bigdata/ThuBigData.ipynb
+++ b/bigdata/ThuBigData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,49 +84,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "min = np.min(attrs, axis=None)\n",
-    "max = np.max(attrs, axis=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scaled_attrs = (attrs-min)/(max-min) + 0.00001"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(40, 7500, 4)"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "min =  1.3171675787247089e-09\n",
+      "max =  0.000854607292409486\n"
+     ]
     }
    ],
    "source": [
-    "np.shape(scaled_attrs)"
+    "min = np.min(attrs, axis=None)\n",
+    "max = np.max(attrs, axis=None)\n",
+    "\n",
+    "print('min = ', min)\n",
+    "print('max = ', max)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "scaled_attrs = (attrs-min)/(max-min) + 0.01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for xls in os.listdir('sample_data/'):\n",
+    "    data = pd.read_excel('sample_data/'+xls, header=None)\n",
+    "\n",
+    "    output = data.iloc[-1,0]\n",
+    "    output = np.float32(output.split(':')[-1])\n",
+    "    data.iloc[-1,0] = 0\n",
+    "    data = (data-min)/(max-min) + 0.01\n",
+    "    data.iloc[-1,0] = output\n",
+    "    file_name = xls.split('.')[0]+'.csv'\n",
+    "    data.to_csv('preprocessed_data/' + file_name)"
+   ]
   }
  ],
  "metadata": {
